add google benchmark and test as submodules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(untitled LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_subdirectory(googletest)
 add_subdirectory(benchmark)
 
 add_executable(untitled main.cpp VectorLibrary.cpp VectorLibrary.hpp)
