--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "vectorclass"]
 	path = vectorclass
 	url = https://github.com/vectorclass/version2.git
+[submodule "benchmark"]
+	path = benchmark
+	url = https://github.com/google/benchmark.git
+[submodule "googletest"]
+	path = googletest
+	url = https://github.com/google/googletest.git
